1.5.1:
	Check that compiler and linker accept -Wall
	Document the comment on end of line bug
	Clean up rc-solaris.sh on make clean
	syslog the expired autowhite entry correctly, from Mattieu Herrb
	Handle mailing lists with unique sender by removing '^.*=' from sender
	Minor bug fixes in queue management from Wolfgang Solfrank
1.3.9:
	Solaris rc script from Christian Pelissier
	Correctly check pthread function return values
	Avoid using a thread for the initial config file load (useless)
	Bug fix: Domain regex were not freed on config file reloads	
	Bug fix: Timeout parmaeter was not honoured everywhere
1.3.8:
	Shut up  a warning at build time
1.3.7:
	Bug fix: on some platforms, reloading the config caused SIGSEGV
1.3.6:
	Big bug fix: rcpt keywords did not work anymore without regex	
	Case-insensitive regular expression matching
1.3.5:
	Fix install bug on some platforms (permissions)
	Use CC as defined by configure, fix the build on Solaris
	Build fix in Yacc file
1.3.4:
	DNS support in greylist.conf through the domain keyword
	Make the greylist timeout a config file option
1.3.3:
	Bug fix: lazyaw did not work properly in some situations
	Final dump on milter-greylist exit
	Case insensitive check for autowhitelist everywhere (was inconsistent)
	Better scallability by adjusting the dump delay
	Work with NetBSD 2.0 native libpthread
1.3.2:
	Support STARTTLS (Contribution from Matthieu Herrb)
	Add a list of broken MTA in the default whitelist
	Fix a bug that caused wrong delay time.
1.3.1:
	Documentation about MX sync and firewalls
	Case insensitive autowhitelist e-mail addresses checks
	Introduce a lazyaw option to match only IP addreses in autowhitelist
	Remove fake error message on dump reload  (make the LOG_DEBUG)
	List build dependenvies in README
1.1.16:
	More buid problems on FreeBSD 
1.1.15:
	Fix build problems on FreeBSD
1.1.14:
	in greylist.conf, make the netmask opttionnal (default to /32)
1.1.13:
	Handle non IPv4 addresses correctly.
1.1.12: