@@ -1,4 +1,4 @@
-/* $Id: sync.c,v 1.42 2004/06/08 14:47:47 manu Exp $ */
+/* $Id: sync.c,v 1.43 2004/06/16 21:00:39 manu Exp $ */
 
 /*
  * Copyright (c) 2004 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID
-__RCSID("$Id: sync.c,v 1.42 2004/06/08 14:47:47 manu Exp $");
+__RCSID("$Id: sync.c,v 1.43 2004/06/16 21:00:39 manu Exp $");
 #endif
 #endif
 
@@ -198,6 +198,7 @@ sync_send(peer, type, pending)	/* peer list is read-locked */
 	char *replystr;
 	int replycode;
 	char line[LINELEN + 1];
+	char *cookie;
 
 	if ((peer->p_stream == NULL) && (peer_connect(peer) != 0))
 		return -1;
@@ -225,7 +226,14 @@ sync_send(peer, type, pending)	/* peer list is read-locked */
 		return -1;
 	}
 
-	if ((replystr = strtok(line, sep)) == NULL) {
+	/*
+	 * On some systems, opening a stream on a socket introduce
+	 * weird behavior: the in and out buffers get mixed up. 
+	 * By calling fflush() after each read operation, we fix that
+	 */
+	fflush(peer->p_stream);
+
+	if ((replystr = strtok_r(line, sep, &cookie)) == NULL) {
 		syslog(LOG_ERR, "Unexpected reply \"%s\" from %s, "
 		    "closing connexion (%d entries queued)", 
 		    line, peer->p_name, peer->p_qlen);
@@ -268,6 +276,7 @@ peer_connect(peer)	/* peer list is read-locked */
 	char peername[IPADDRLEN + 1];
 	char line[LINELEN + 1];
 	int param;
+	char *cookie;
 
 	if (peer->p_stream != NULL)
 		syslog(LOG_ERR, "peer_connect called and peer->p_stream != 0");
@@ -349,7 +358,14 @@ peer_connect(peer)	/* peer list is read-locked */
 		goto bad;
 	}
 
-	if ((replystr = strtok(line, sep)) == NULL) {
+	/*
+	 * On some systems, opening a stream on a socket introduce
+	 * weird behavior: the in and out buffers get mixed up. 
+	 * By calling fflush() after each read operation, we fix that
+	 */
+	fflush(stream);
+
+	if ((replystr = strtok_r(line, sep, &cookie)) == NULL) {
 		syslog(LOG_ERR, "Unexpected reply \"%s\" from peer %s "
 		    "closing connexion (%d entries queued)", 
 		    line, peername, peer->p_qlen);
