@@ -1,4 +1,5 @@
 1.5.1:
+	Fix mixed I/O in MX sync on Solaris, from Attila Bruncsak
 	Check that compiler and linker accept -Wall
 	Document the comment on end of line bug
 	Clean up rc-solaris.sh on make clean
